// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`F2: claves del prototipo de Object > __proto__ muestra un toast info vacio y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold"></p></div>",
    "options": {
      "className": "toast-industrial-info",
      "progressClassName": "toast-industrial-progress-info",
    },
    "toast": "info",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`F2: claves del prototipo de Object > constructor muestra un toast info vacio y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold"></p></div>",
    "options": {
      "className": "toast-industrial-info",
      "progressClassName": "toast-industrial-progress-info",
    },
    "toast": "info",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`F2: claves del prototipo de Object > hasOwnProperty muestra un toast info vacio y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold"></p></div>",
    "options": {
      "className": "toast-industrial-info",
      "progressClassName": "toast-industrial-progress-info",
    },
    "toast": "info",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`F2: claves del prototipo de Object > toString muestra un toast info vacio y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold"></p></div>",
    "options": {
      "className": "toast-industrial-info",
      "progressClassName": "toast-industrial-progress-info",
    },
    "toast": "info",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`F2: claves del prototipo de Object > valueOf muestra un toast info vacio y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold"></p></div>",
    "options": {
      "className": "toast-industrial-info",
      "progressClassName": "toast-industrial-progress-info",
    },
    "toast": "info",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`URL > con toast repetido muestra el primero y quita todos 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Cliente guardado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`URL > conserva los demas parametros al quitar toast 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Cliente guardado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard/commercial/clients?page=2&q=acero {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > attendance-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Asistencia registrada correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > campaign-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Campaña creada correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > campaign-detail-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Producto agregado a la campaña</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > campaign-status-activa: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Campaña activada</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > campaign-status-anulada: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Campaña anulada</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > campaign-status-finalizada: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Campaña finalizada</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > campaign-updated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Campaña actualizada correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > client-activated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Cliente activado</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > client-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Cliente guardado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > client-deactivated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Cliente desactivado</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > client-updated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Cliente actualizado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > costing-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Costeo creado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > costing-recalculated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Costeo recalculado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > costing-updated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Costeo actualizado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > expense-category-activated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Categoría de gasto activada</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > expense-category-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Categoría de gasto creada correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > expense-category-deactivated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Categoría de gasto desactivada</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > expense-category-updated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Categoría de gasto actualizada correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > failure-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Falla registrada correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > failure-updated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Estado de falla actualizado</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > indirect-cost-annulled: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Costo indirecto anulado</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > indirect-cost-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Costo indirecto agregado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > inventory-movement-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Movimiento de inventario registrado</p><p class="text-xs leading-relaxed text-muted-foreground">Stock actualizado correctamente.</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > login-success: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Inicio de sesión exitoso</p><p class="text-xs leading-relaxed text-muted-foreground">Bienvenido al Sistema de Gestión Integral.</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > machine-activated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Máquina activada</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > machine-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Máquina guardada correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > machine-deactivated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Máquina desactivada</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > machine-status-updated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Estado de máquina actualizado</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > machine-updated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Máquina actualizada correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > margin-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Margen aplicado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > material-activated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Material activado</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > material-category-activated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Categoría de material activada</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > material-category-deactivated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Categoría de material desactivada</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > material-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Material guardado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > material-deactivated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Material desactivado</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > material-updated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Material actualizado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > operator-activated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Operario activado</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > operator-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Operario guardado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > operator-deactivated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Operario desactivado</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > operator-payment-registered: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Pago a operario registrado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > operator-task-annulled: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Tarea anulada</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > operator-task-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Tarea registrada correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > operator-updated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Operario actualizado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > order-cancelled: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Pedido cancelado</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > order-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Pedido creado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > order-updated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Pedido actualizado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > payment-registered: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Pago registrado correctamente</p><p class="text-xs leading-relaxed text-muted-foreground">El saldo fue actualizado.</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > payroll-annulled: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Planilla anulada</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > payroll-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Planilla generada correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > petty-cash-box-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Caja chica creada correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > petty-cash-expense-registered: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Egreso de caja registrado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > petty-cash-income-registered: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Ingreso de caja registrado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > petty-cash-movement-annulled: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Movimiento de caja anulado</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > preventive-maintenance-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Mantenimiento preventivo programado</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > preventive-maintenance-updated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Estado de mantenimiento actualizado</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > product-activated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Producto activado</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > product-category-activated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Categoría de producto activada</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > product-category-deactivated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Categoría de producto desactivada</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > product-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Producto guardado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > product-deactivated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Producto desactivado</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > product-updated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Producto actualizado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > profitability-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Rentabilidad calculada correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > purchase-annulled: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Compra anulada</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > purchase-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Compra registrada correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > quote-annulled: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Proforma anulada</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > quote-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Proforma creada correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > receipt-annulled: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Comprobante anulado</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > receipt-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Comprobante registrado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > recipe-activated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Receta técnica activada</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > recipe-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Receta técnica creada correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > recipe-deactivated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Receta técnica desactivada</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > recipe-detail-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Material agregado a la receta</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > recipe-detail-deleted: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Material eliminado de la receta</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > recipe-detail-updated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Detalle de receta actualizado</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > recipe-version-annulled: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Versión de receta anulada</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > recipe-version-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Nueva versión de receta creada</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > recipe-version-set-current: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Versión de receta marcada como vigente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > repair-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Reparación registrada correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > repair-updated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Estado de reparación actualizado</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > reusable-scrap-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Retazo reutilizable creado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > route-activated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Ruta de fabricación activada</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > route-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Ruta de fabricación creada correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > route-deactivated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Ruta de fabricación desactivada</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > route-stage-activated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Etapa de ruta activada</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > route-stage-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Etapa de ruta creada correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > route-stage-deactivated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Etapa de ruta desactivada</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > route-stage-updated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Etapa de ruta actualizada correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > route-updated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Ruta de fabricación actualizada correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > scrap-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Chatarra registrada correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > scrap-sale-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Venta de chatarra registrada correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > spare-part-activated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Repuesto activado</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > spare-part-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Repuesto guardado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > spare-part-deactivated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Repuesto desactivado</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > spare-part-updated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Repuesto actualizado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > stock-alert-attended: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Alerta de stock atendida</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > supplier-activated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Proveedor activado</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > supplier-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Proveedor guardado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > supplier-deactivated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Proveedor desactivado</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > supplier-material-activated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Asociación proveedor-material activada</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > supplier-material-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Asociación proveedor-material creada</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > supplier-material-deactivated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Asociación proveedor-material desactivada</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > supplier-material-updated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Asociación proveedor-material actualizada</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > supplier-payment-registered: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Pago a proveedor registrado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > supplier-type-activated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Tipo de proveedor activado</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > supplier-type-deactivated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Tipo de proveedor desactivado</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > supplier-updated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Proveedor actualizado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > user-activated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Usuario activado</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > user-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Usuario creado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > user-deactivated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Usuario desactivado</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > user-password-reset: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Contraseña reiniciada correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > user-self-deactivate-blocked: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">No puedes desactivar tu propio usuario</p></div>",
    "options": {
      "className": "toast-industrial-error",
      "progressClassName": "toast-industrial-progress-error",
    },
    "toast": "error",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > user-updated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Usuario actualizado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > work-order-additional-delivery: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Entrega adicional registrada</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > work-order-annulled: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Orden de trabajo anulada</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > work-order-created: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Orden de trabajo creada correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > work-order-finished: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Orden de trabajo finalizada</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > work-order-material-returned: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Devolución registrada</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > work-order-materials-closed: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Materiales cerrados</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > work-order-materials-consumed: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Consumo de materiales registrado</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > work-order-materials-delivered: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Materiales entregados a la orden</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > work-order-materials-reopened: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Cierre de materiales reabierto</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > work-order-progress-generated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Avances de orden generados correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > work-order-progress-reassigned: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Tarea reasignada correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`cada clave del catalogo > work-order-progress-updated: muestra su toast y limpia la URL 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Avance de orden actualizado</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;

exports[`repeticion de claves en un mismo montaje > dos claves distintas seguidas se muestran las dos 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Cliente guardado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard/commercial/clients {"scroll":false}",
  },
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Cliente desactivado</p></div>",
    "options": {
      "className": "toast-industrial-warning",
      "progressClassName": "toast-industrial-progress-warning",
    },
    "toast": "warning",
  },
  {
    "effect": "router.replace /dashboard/commercial/clients {"scroll":false}",
  },
]
`;

exports[`repeticion de claves en un mismo montaje > el mismo render dos veces (modo estricto) muestra un solo toast 1`] = `
[
  {
    "html": "<div class="space-y-1"><p class="text-sm font-semibold">Cliente guardado correctamente</p></div>",
    "options": {
      "className": "toast-industrial-success",
      "progressClassName": "toast-industrial-progress-success",
    },
    "toast": "success",
  },
  {
    "effect": "router.replace /dashboard {"scroll":false}",
  },
]
`;
